--- a/templates/home.html
+++ b/templates/home.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Note Taking Application</title>
 </head>
 <body>
-    <form action="">
-        <input type="text" name="note" placeholder="Enter a note">
-        <button>Add Note</button>
+    <h1>Note Taking Application</h1>
+    <form method="POST">
+        <label for="note">Add a Note:</label>
+        <input type="text" id="note" name="note" required>
+        <button type="submit">Add Note</button>
     </form>
 
+    <h2>Your Notes:</h2>
     <ul>
-    {% for note in notes%}
+        {% for note in notes %}
         <li>{{ note }}</li>
-    {% endfor %}
+        {% endfor %}
     </ul>
 </body>
 </html>
